# biometric-smart-office-check-in-system

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.prod.yaml  compose.yaml  diesel.toml
config/: mosquitto.conf  password
doc/: requisitos.md
esp-firmware/: CMakeLists.txt  hex2img.py
esp-firmware/main/: CMakeLists.txt  config.h  esp-firmware.c  finger.c  finger.h
migrations/2025-07-15-090515_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: fingerprint.rs  mod.rs  users.rs
src/api_doc/: doc.rs  mod.rs
src/config/: connection.rs  mod.rs  settings.rs
src/models/: fingerprint.rs  mod.rs  user.rs
src/repository/: user.rs
src/services/: user.rs
