[package]
name = "biometric-smart-office-check-in-system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", default-features = false, features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
jwt = "0.16.0"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.98"
utoipa-axum = "0.2.0"
rumqttc = "0.24"
tokio-util = "0.7"
png = "0.17"

